--- a/pom.xml
+++ b/pom.xml
@@ -8,35 +8,75 @@
     <artifactId>RailwayManager</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>sample</module>
+    </modules>
 
-<dependencies>
+    <dependencies>
+
+    <!-- MySQL -->
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.18</version>
+    </dependency>
+
+    <!-- Spring-jdbc -->
+<!--    <dependency>-->
+<!--        <groupId>org.springframework</groupId>-->
+<!--        <artifactId>spring-jdbc</artifactId>-->
+<!--        <version>5.2.0.RELEASE</version>-->
+<!--    </dependency>-->
+
+
+    <!-- Java.jdbc -->
+    <dependency>
+        <groupId>org.clojure</groupId>
+        <artifactId>java.jdbc</artifactId>
+        <version>0.7.8</version>
+    </dependency>
+
+<!--    &lt;!&ndash; Hibernate &ndash;&gt;-->
+<!--    <dependency>-->
+<!--        <groupId>org.hibernate</groupId>-->
+<!--        <artifactId>hibernate-core</artifactId>-->
+<!--        <version>5.4.4.Final</version>-->
+<!--    </dependency>-->
+
+<!--    &lt;!&ndash; Hibernate entity manager&ndash;&gt;-->
+<!--    <dependency>-->
+<!--        <groupId>org.hibernate</groupId>-->
+<!--        <artifactId>hibernate-entitymanager</artifactId>-->
+<!--        <version>5.4.4.Final</version>-->
+<!--    </dependency>-->
+
     <!-- Spring core -->
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-        <version>5.1.8.RELEASE</version>
-    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>org.springframework</groupId>-->
+<!--        <artifactId>spring-core</artifactId>-->
+<!--        <version>5.1.8.RELEASE</version>-->
+<!--    </dependency>-->
 
-    <!-- Spring context -->
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>5.1.8.RELEASE</version>
-    </dependency>
+<!--    &lt;!&ndash; Spring context &ndash;&gt;-->
+<!--    <dependency>-->
+<!--        <groupId>org.springframework</groupId>-->
+<!--        <artifactId>spring-context</artifactId>-->
+<!--        <version>5.1.8.RELEASE</version>-->
+<!--    </dependency>-->
 
     <!-- Spring web -->
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>5.1.8.RELEASE</version>
-    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>org.springframework</groupId>-->
+<!--        <artifactId>spring-web</artifactId>-->
+<!--        <version>5.1.8.RELEASE</version>-->
+<!--    </dependency>-->
 
     <!-- Spring webmvc-->
-    <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
-        <version>5.1.8.RELEASE</version>
-    </dependency>
+<!--    <dependency>-->
+<!--        <groupId>org.springframework</groupId>-->
+<!--        <artifactId>spring-webmvc</artifactId>-->
+<!--        <version>5.1.8.RELEASE</version>-->
+<!--    </dependency>-->
 
     <!-- Spring ORM-->
     <dependency>
@@ -60,13 +100,6 @@
         <version>9.0.27</version>
     </dependency>
 
-       <!-- MySQL -->
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.18</version>
-    </dependency>
-
     <!-- Lombok-->
     <dependency>
         <groupId>org.projectlombok</groupId>
@@ -74,21 +107,6 @@
         <version>${lombok.version}</version>
         <scope>provided</scope>
     </dependency>
-
-    <!-- Hibernate -->
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-core</artifactId>
-        <version>5.4.4.Final</version>
-    </dependency>
-
-    <!-- Hibernate entity manager-->
-    <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <version>5.4.4.Final</version>
-    </dependency>
-
 
 
 </dependencies>
