--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -49,6 +49,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- JPA-->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.2.Final</version>
+        </dependency>
+
         <!-- Spring ORM-->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -73,7 +80,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <lombok.version>1.18.10 </lombok.version>
+        <lombok.version>1.18.10</lombok.version>
     </properties>
 
 </project>
