mapping hibernate connection to main src

--- a/pom.xml
+++ b/pom.xml
@@ -2,132 +2,148 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
+
+    <parent>
     <groupId>gazizov.com</groupId>
     <artifactId>RailwayManager</artifactId>
-    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>sample</module>
-    </modules>
+    </parent>
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>jpa-RailwayManager</artifactId>
 
     <dependencies>
 
-    <!-- MySQL -->
-    <dependency>
-        <groupId>mysql</groupId>
-        <artifactId>mysql-connector-java</artifactId>
-        <version>8.0.18</version>
-    </dependency>
+        <!-- MySQL -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
+            <scope>runtime</scope>
+        </dependency>
 
-    <!-- Spring-jdbc -->
-<!--    <dependency>-->
-<!--        <groupId>org.springframework</groupId>-->
-<!--        <artifactId>spring-jdbc</artifactId>-->
-<!--        <version>5.2.0.RELEASE</version>-->
-<!--    </dependency>-->
-
-
-    <!-- Java.jdbc -->
-    <dependency>
-        <groupId>org.clojure</groupId>
-        <artifactId>java.jdbc</artifactId>
-        <version>0.7.8</version>
-    </dependency>
-
-<!--    &lt;!&ndash; Hibernate &ndash;&gt;-->
-<!--    <dependency>-->
-<!--        <groupId>org.hibernate</groupId>-->
-<!--        <artifactId>hibernate-core</artifactId>-->
-<!--        <version>5.4.4.Final</version>-->
-<!--    </dependency>-->
-
-<!--    &lt;!&ndash; Hibernate entity manager&ndash;&gt;-->
-<!--    <dependency>-->
-<!--        <groupId>org.hibernate</groupId>-->
-<!--        <artifactId>hibernate-entitymanager</artifactId>-->
-<!--        <version>5.4.4.Final</version>-->
-<!--    </dependency>-->
-
-    <!-- Spring core -->
-<!--    <dependency>-->
-<!--        <groupId>org.springframework</groupId>-->
-<!--        <artifactId>spring-core</artifactId>-->
-<!--        <version>5.1.8.RELEASE</version>-->
-<!--    </dependency>-->
-
-<!--    &lt;!&ndash; Spring context &ndash;&gt;-->
-<!--    <dependency>-->
-<!--        <groupId>org.springframework</groupId>-->
-<!--        <artifactId>spring-context</artifactId>-->
-<!--        <version>5.1.8.RELEASE</version>-->
-<!--    </dependency>-->
-
-    <!-- Spring web -->
-<!--    <dependency>-->
-<!--        <groupId>org.springframework</groupId>-->
-<!--        <artifactId>spring-web</artifactId>-->
-<!--        <version>5.1.8.RELEASE</version>-->
-<!--    </dependency>-->
-
-    <!-- Spring webmvc-->
-<!--    <dependency>-->
-<!--        <groupId>org.springframework</groupId>-->
-<!--        <artifactId>spring-webmvc</artifactId>-->
-<!--        <version>5.1.8.RELEASE</version>-->
-<!--    </dependency>-->
-
-    <!-- Spring ORM-->
-<!--    <dependency>-->
-<!--        <groupId>org.springframework</groupId>-->
-<!--        <artifactId>spring-orm</artifactId>-->
-<!--        <version>5.1.8.RELEASE</version>-->
-<!--    </dependency>-->
-
-    <!-- Servlet -->
-    <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>4.0.1</version>
-        <scope>provided</scope>
-    </dependency>
-
-    <!-- Tomcat -->
-    <dependency>
-        <groupId>org.apache.tomcat</groupId>
-        <artifactId>tomcat-catalina</artifactId>
-        <version>9.0.27</version>
-    </dependency>
-
-<!--    &lt;!&ndash; Lombok&ndash;&gt;-->
-<!--    <dependency>-->
-<!--        <groupId>org.projectlombok</groupId>-->
-<!--        <artifactId>lombok</artifactId>-->
-<!--        <version>${lombok.version}</version>-->
-<!--        <scope>provided</scope>-->
-<!--    </dependency>-->
+        <!-- Spring-jdbc -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>5.1.8.RELEASE</version>
+            </dependency>
 
 
-</dependencies>
+<!--        &lt;!&ndash; Java.jdbc &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.clojure</groupId>-->
+<!--            <artifactId>java.jdbc</artifactId>-->
+<!--            <version>0.7.8</version>-->
+<!--        </dependency>-->
+
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.4.Final</version>
+        </dependency>
+
+<!--        &lt;!&ndash; Hibernate entity manager&ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.hibernate</groupId>-->
+<!--            <artifactId>hibernate-entitymanager</artifactId>-->
+<!--            <version>5.4.4.Final</version>-->
+<!--        </dependency>-->
+
+<!--        &lt;!&ndash;Spring core &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-core</artifactId>-->
+<!--            <version>5.1.8.RELEASE</version>-->
+<!--        </dependency>-->
+
+        <!--Spring boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.1.6.RELEASE</version>
+        </dependency>
+
+        <!-- Spring context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
+
+        <!-- Spring web -->
+        <!--    <dependency>-->
+        <!--        <groupId>org.springframework</groupId>-->
+        <!--        <artifactId>spring-web</artifactId>-->
+        <!--        <version>5.1.8.RELEASE</version>-->
+        <!--    </dependency>-->
+
+        <!-- Spring webmvc-->
+        <!--    <dependency>-->
+        <!--        <groupId>org.springframework</groupId>-->
+        <!--        <artifactId>spring-webmvc</artifactId>-->
+        <!--        <version>5.1.8.RELEASE</version>-->
+        <!--    </dependency>-->
+
+        <!-- Spring ORM-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
+
+<!--        &lt;!&ndash; Servlet &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>javax.servlet</groupId>-->
+<!--            <artifactId>javax.servlet-api</artifactId>-->
+<!--            <version>4.0.1</version>-->
+<!--            <scope>provided</scope>-->
+<!--        </dependency>-->
+
+<!--        &lt;!&ndash; Tomcat &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.tomcat</groupId>-->
+<!--            <artifactId>tomcat-catalina</artifactId>-->
+<!--            <version>9.0.27</version>-->
+<!--        </dependency>-->
+
+            <!-- Lombok-->
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
+        <!-- JPA-->
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.2.Final</version>
+        </dependency>
+
+    </dependencies>
 
     <properties>
         <java.version>11</java.version>
-        <lombok.version>1.18.10 </lombok.version>
+        <lombok.version>1.18.10</lombok.version>
     </properties>
 
     <build>
-    <plugins>
-    <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-        </configuration>
-    </plugin>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
 
-    </plugins>
+        </plugins>
     </build>
 
 
