--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -4,12 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>main-RailwayManager</artifactId>
+        <artifactId>RailwayManager</artifactId>
         <groupId>gazizov.com</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
+<!--    <packaging>pom</packaging>-->
+
 
     <artifactId>persistence</artifactId>
 
