--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -9,11 +9,11 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
 <!--    <packaging>pom</packaging>-->
 
-
     <artifactId>persistence</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+
 
     <dependencies>
 
@@ -39,7 +39,14 @@
             <version>5.1.8.RELEASE</version>
         </dependency>
 
-<!--        &lt;!&ndash; Spring-context &ndash;&gt;-->
+        <!-- Spring-Beans-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
+
+        <!--        &lt;!&ndash; Spring-context &ndash;&gt;-->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework</groupId>-->
 <!--            <artifactId>spring-context</artifactId>-->
@@ -75,25 +82,6 @@
 <!--        </dependency>-->
 
     </dependencies>
-
-    <properties>
-        <java.version>11</java.version>
-        <lombok.version>1.18.10</lombok.version>
-    </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
 
 
 </project>
