--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-
-
     <groupId>gazizov.com</groupId>
     <artifactId>RailwayManager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <modelVersion>4.0.0</modelVersion>
 
-<!--    <artifactId>main-RailwayManager</artifactId>-->
     <packaging>pom</packaging>
+
+    <name>RailwayManager</name>
 
     <modules>
         <module>persistence</module>
+        <module>service</module>
+        <module>domainModel</module>
     </modules>
 
     <dependencies>
