battle with modules

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -2,21 +2,50 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>RailwayManager</artifactId>
-        <groupId>gazizov.com</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+
+    <!--    <parent>-->
+    <!--        <artifactId>RailwayManager</artifactId>-->
+    <!--        <groupId>gazizov.com</groupId>-->
+    <!--        <version>1.0-SNAPSHOT</version>-->
+    <!--    </parent>-->
+
 
     <artifactId>service</artifactId>
+    <groupId>gazizov.com</groupId>
+    <version>1.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+
+    <name>service</name>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>gazizov.com</groupId>
+            <artifactId>persistence</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+    </dependencies>
 
     <properties>
-
-
-
-
+        <java.version>11</java.version>
+        <lombok.version>1.18.10</lombok.version>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
 
 
 </project>
