--- a/pom.xml
+++ b/pom.xml
@@ -21,42 +21,12 @@
 
     <dependencies>
 
-<!--        &lt;!&ndash; MySQL &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>mysql</groupId>-->
-<!--            <artifactId>mysql-connector-java</artifactId>-->
-<!--            <version>8.0.18</version>-->
-<!--            <scope>runtime</scope>-->
-<!--        </dependency>-->
-
-<!--        &lt;!&ndash; Spring-jdbc &ndash;&gt;-->
-<!--            <dependency>-->
-<!--                <groupId>org.springframework</groupId>-->
-<!--                <artifactId>spring-jdbc</artifactId>-->
-<!--                <version>5.1.8.RELEASE</version>-->
-<!--            </dependency>-->
-
-
-<!--        &lt;!&ndash; Java.jdbc &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.clojure</groupId>-->
-<!--            <artifactId>java.jdbc</artifactId>-->
-<!--            <version>0.7.8</version>-->
-<!--        </dependency>-->
-
         <!-- Hibernate -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.4.4.Final</version>
         </dependency>
-
-<!--        &lt;!&ndash; Hibernate entity manager&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.hibernate</groupId>-->
-<!--            <artifactId>hibernate-entitymanager</artifactId>-->
-<!--            <version>5.4.4.Final</version>-->
-<!--        </dependency>-->
 
         <!--Spring core -->
         <dependency>
@@ -73,56 +43,51 @@
             <version>5.1.8.RELEASE</version>
         </dependency>
 
-        <!-- Spring web -->
-        <!--    <dependency>-->
-        <!--        <groupId>org.springframework</groupId>-->
-        <!--        <artifactId>spring-web</artifactId>-->
-        <!--        <version>5.1.8.RELEASE</version>-->
-        <!--    </dependency>-->
 
-        <!-- Spring webmvc-->
-        <!--    <dependency>-->
-        <!--        <groupId>org.springframework</groupId>-->
-        <!--        <artifactId>spring-webmvc</artifactId>-->
-        <!--        <version>5.1.8.RELEASE</version>-->
-        <!--    </dependency>-->
+        <!--        &lt;!&ndash; Servlet &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>javax.servlet</groupId>-->
+        <!--            <artifactId>javax.servlet-api</artifactId>-->
+        <!--            <version>4.0.1</version>-->
+        <!--            <scope>provided</scope>-->
+        <!--        </dependency>-->
 
-<!--        &lt;!&ndash; Spring ORM&ndash;&gt;-->
+        <!--        &lt;!&ndash; Tomcat &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.tomcat</groupId>-->
+        <!--            <artifactId>tomcat-catalina</artifactId>-->
+        <!--            <version>9.0.27</version>-->
+        <!--        </dependency>-->
+
+<!--        &lt;!&ndash; Lombok&ndash;&gt;-->
 <!--        <dependency>-->
-<!--            <groupId>org.springframework</groupId>-->
-<!--            <artifactId>spring-orm</artifactId>-->
-<!--            <version>5.1.8.RELEASE</version>-->
-<!--        </dependency>-->
-
-<!--        &lt;!&ndash; Servlet &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>javax.servlet</groupId>-->
-<!--            <artifactId>javax.servlet-api</artifactId>-->
-<!--            <version>4.0.1</version>-->
+<!--            <groupId>org.projectlombok</groupId>-->
+<!--            <artifactId>lombok</artifactId>-->
+<!--            <version>${lombok.version}</version>-->
 <!--            <scope>provided</scope>-->
 <!--        </dependency>-->
 
-<!--        &lt;!&ndash; Tomcat &ndash;&gt;-->
+        <!-- Service-->
+        <dependency>
+            <groupId>gazizov.com</groupId>
+            <artifactId>service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+<!--        &lt;!&ndash; Persistence&ndash;&gt;-->
 <!--        <dependency>-->
-<!--            <groupId>org.apache.tomcat</groupId>-->
-<!--            <artifactId>tomcat-catalina</artifactId>-->
-<!--            <version>9.0.27</version>-->
+<!--            <groupId>gazizov.com</groupId>-->
+<!--            <artifactId>persistence</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
 
-            <!-- Lombok-->
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-                <scope>provided</scope>
-            </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>gazizov.com</groupId>-->
+        <!--            <artifactId>domainModel</artifactId>-->
+        <!--            <version>1.0-SNAPSHOT</version>-->
+        <!--        </dependency>-->
 
-        <!-- JPA-->
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>1.0.2.Final</version>
-        </dependency>
 
     </dependencies>
 
