--- a/pom.xml
+++ b/pom.xml
@@ -59,13 +59,13 @@
         <!--            <version>9.0.27</version>-->
         <!--        </dependency>-->
 
-<!--        &lt;!&ndash; Lombok&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.projectlombok</groupId>-->
-<!--            <artifactId>lombok</artifactId>-->
-<!--            <version>${lombok.version}</version>-->
-<!--            <scope>provided</scope>-->
-<!--        </dependency>-->
+        <!--        &lt;!&ndash; Lombok&ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.projectlombok</groupId>-->
+        <!--            <artifactId>lombok</artifactId>-->
+        <!--            <version>${lombok.version}</version>-->
+        <!--            <scope>provided</scope>-->
+        <!--        </dependency>-->
 
         <!-- Service-->
         <dependency>
@@ -75,12 +75,12 @@
             <scope>compile</scope>
         </dependency>
 
-<!--        &lt;!&ndash; Persistence&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>gazizov.com</groupId>-->
-<!--            <artifactId>persistence</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
+        <!--        &lt;!&ndash; Persistence&ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>gazizov.com</groupId>-->
+        <!--            <artifactId>persistence</artifactId>-->
+        <!--            <version>1.0-SNAPSHOT</version>-->
+        <!--        </dependency>-->
 
         <!--        <dependency>-->
         <!--            <groupId>gazizov.com</groupId>-->
@@ -88,6 +88,17 @@
         <!--            <version>1.0-SNAPSHOT</version>-->
         <!--        </dependency>-->
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.1.8.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
